--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sat Nov 10 19:17:59 CET 2018
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/la_librairie_de_raymonde|la_librairie_de_raymonde
 webAllowOthers=true
 webPort=8082
